docs: rewrite README and guides for 2.0.0
Restructure both READMEs around a single quick-start path per framework
and move the architecture diagram above installation. Rewrite the usage
guide, migration guide, and internals doc in Korean and English with a
shared chapter layout:

- Usage guide: Spring Boot setup, Ktor setup, then framework-neutral
  repository and transaction chapters; adds Auditing and BlockHound
  sections that had no documentation before.
- Migration guide: compatibility tables first, then steps, then a
  behavioral-difference table and checklist.
- Internals: rewritten against the current code, covering the shared
  repository runtime, Ktor plugin lifecycle, and Spring auto-config.

Clarify that REQUIRES_NEW is not rejected by the code; only nested use
is unsupported.

Claude-Session: https://claude.ai/code/session_01BLZ2QkjiP5bGHC8u2pAfFJ